# memoize

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  changelog.md  memoize.cabal
.github/workflows/: ci.yaml
Data/Function/: Memoize.hs
Data/Function/Memoize/: Class.hs  Rec.hs  TH.hs
src/Data/Function/: Memoize.hs
src/Data/Function/Memoize/: Class.hs  TH.hs
test/: Test3Helper.hs  test1.hs  test2.hs  test2g.hs  test3.hs  test3g.hs
