name:           memoize
version:        0.8.1
cabal-version:  >= 1.8
license:        BSD3
license-file:   LICENSE
stability:      experimental
author:         Jesse A. Tov <jesse@eecs.northwestern.edu>
maintainer:     jesse@eecs.northwestern.edu
category:       Data
synopsis:       A memoization library
build-type:     Simple
tested-with:    GHC == 7.10.3, GHC == 7.8.4, GHC == 7.6.3

description:
        This library provides a type class 'Memoizable' for memoizing
        functions, along with instances for a variety of argument types.
        It includes a Template Haskell function for deriving
        'Memoizable' instances for arbitrary algebraic datatypes.
        .
        The library constructs pure memo caches without the use of
        'unsafePerformIO'.  This technique relies on implementation
        assumptions that, while not guaranteed by the semantics of
        Haskell, appear to be true.

library
  build-depends:        base >=3 && <5,
                        template-haskell >=2 && <3

  ghc-options:          -Wall -fno-warn-orphans
  hs-source-dirs:       src
  exposed-modules:
    Data.Function.Memoize
  other-modules:
    Data.Function.Memoize.TH
    Data.Function.Memoize.Class

test-suite memoize-test1
    Hs-Source-Dirs: test
    Type: exitcode-stdio-1.0
    Main-is: test1.hs
    build-depends: base, memoize

test-suite memoize-test2
    Hs-Source-Dirs: test
    Type: exitcode-stdio-1.0
    Main-is: test2.hs
    build-depends: base, memoize
    
source-repository head
  type:                 git
  location:             git://github.com/tov/memoize.git
